deployment/argo-rollout-project/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: apache-rollouts-demo
spec:
  replicas: 20
  strategy:
    canary:
      maxSurge: 25%
      maxUnavailable: 0
      analysis:
        templates:
        - templateName: success-rate
        startingStep: 2
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: apache-rollouts-demo
  template:
    metadata:
      labels:
        app: apache-rollouts-demo
    spec:
      containers:
      - name: apache-rollouts-demo
        image: itguruanil/webserver:3
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
