deployment/argo-rollout-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-rollouts-demo
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: apache-rollouts-demo
